--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1>Zcash 5.5.1
+                        <h1>Zcash 5.6.0
 <img align="right" width="120" height="80" src="doc/imgs/logo.png"></h1>
 <h2 id="what-is-zcash"><a class="header" href="#what-is-zcash">What is Zcash?</a></h2>
 <p><a href="https://z.cash/">Zcash</a> is an implementation of the &quot;Zerocash&quot; protocol.
@@ -188,6 +188,7 @@ for instructions on joining the main Zcash network.</p>
 for help and more information.</li>
 <li>:incoming_envelope: Ask for help on the <a href="https://forum.z.cash/">Zcash</a> forum.</li>
 <li>:speech_balloon: Join our community on <a href="https://discordapp.com/invite/PhJY6Pm">Discord</a></li>
+<li>🧑‍🎓: Learn at <a href="https://wiki.zechub.xyz/">ZecHub</a></li>
 </ul>
 <p>Participation in the Zcash project is subject to a
 <a href="code_of_conduct.html">Code of Conduct</a>.</p>
