--- a/user/tor.html
+++ b/user/tor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" class="sidebar-visible no-js light">
+<html lang="en" class="light" dir="ltr">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
@@ -10,7 +10,7 @@
         
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="theme-color" content="#ffffff" />
+        <meta name="theme-color" content="#ffffff">
 
         <link rel="icon" href="../favicon.svg">
         <link rel="shortcut icon" href="../favicon.png">
@@ -31,7 +31,7 @@
         <!-- Custom theme stylesheets -->
 
     </head>
-    <body>
+    <body class="sidebar-visible no-js">
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
@@ -61,31 +61,38 @@
             try { theme = localStorage.getItem('mdbook-theme'); } catch(e) { }
             if (theme === null || theme === undefined) { theme = default_theme; }
             var html = document.querySelector('html');
-            html.classList.remove('no-js')
             html.classList.remove('light')
             html.classList.add(theme);
-            html.classList.add('js');
+            var body = document.querySelector('body');
+            body.classList.remove('no-js')
+            body.classList.add('js');
         </script>
+
+        <input type="checkbox" id="sidebar-toggle-anchor" class="hidden">
 
         <!-- Hide / unhide sidebar before it is displayed -->
         <script>
-            var html = document.querySelector('html');
+            var body = document.querySelector('body');
             var sidebar = null;
+            var sidebar_toggle = document.getElementById("sidebar-toggle-anchor");
             if (document.body.clientWidth >= 1080) {
                 try { sidebar = localStorage.getItem('mdbook-sidebar'); } catch(e) { }
                 sidebar = sidebar || 'visible';
             } else {
                 sidebar = 'hidden';
             }
-            html.classList.remove('sidebar-visible');
-            html.classList.add("sidebar-" + sidebar);
+            sidebar_toggle.checked = sidebar === 'visible';
+            body.classList.remove('sidebar-visible');
+            body.classList.add("sidebar-" + sidebar);
         </script>
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">zcashd</a></li><li class="chapter-item expanded "><a href="../user.html"><strong aria-hidden="true">1.</strong> User Documentation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../user/release-support.html"><strong aria-hidden="true">1.1.</strong> Release Support</a></li><li class="chapter-item expanded "><a href="../user/platform-support.html"><strong aria-hidden="true">1.2.</strong> Platform Support</a></li><li class="chapter-item expanded "><a href="../user/wallet-backup.html"><strong aria-hidden="true">1.3.</strong> Wallet Backup</a></li><li class="chapter-item expanded "><a href="../user/shield-coinbase.html"><strong aria-hidden="true">1.4.</strong> Shielding Coinbase Outputs</a></li><li class="chapter-item expanded "><a href="../user/files.html"><strong aria-hidden="true">1.5.</strong> Data Directory Structure</a></li><li class="chapter-item expanded "><a href="../user/metrics.html"><strong aria-hidden="true">1.6.</strong> Metrics</a></li><li class="chapter-item expanded "><a href="../user/tor.html" class="active"><strong aria-hidden="true">1.7.</strong> Using zcashd with Tor</a></li><li class="chapter-item expanded "><a href="../user/security-warnings.html"><strong aria-hidden="true">1.8.</strong> Security Warnings</a></li><li class="chapter-item expanded "><a href="../user/deprecation.html"><strong aria-hidden="true">1.9.</strong> Deprecated Features</a></li></ol></li><li class="chapter-item expanded "><a href="../dev.html"><strong aria-hidden="true">2.</strong> Developer Documentation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../dev/dnsseed-policy.html"><strong aria-hidden="true">2.1.</strong> DNS Seeders</a></li><li class="chapter-item expanded "><a href="../dev/rust.html"><strong aria-hidden="true">2.2.</strong> Rust in zcashd</a></li><li class="chapter-item expanded "><a href="../dev/regtest.html"><strong aria-hidden="true">2.3.</strong> Regtest Tips And Hints</a></li><li class="chapter-item expanded "><a href="../dev/platform-tier-policy.html"><strong aria-hidden="true">2.4.</strong> Platform Tier Policy</a></li><li class="chapter-item expanded "><a href="../dev/deprecation.html"><strong aria-hidden="true">2.5.</strong> Deprecation Procedure</a></li></ol></li><li class="chapter-item expanded "><a href="../design.html"><strong aria-hidden="true">3.</strong> Design</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../design/chain-state.html"><strong aria-hidden="true">3.1.</strong> Chain State</a></li><li class="chapter-item expanded "><a href="../design/coins-view.html"><strong aria-hidden="true">3.2.</strong> "Coins" View</a></li><li class="chapter-item expanded "><a href="../design/p2p-data-propagation.html"><strong aria-hidden="true">3.3.</strong> P2P Data Propagation</a></li></ol></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -116,9 +123,9 @@
                                 <div id="menu-bar-hover-placeholder"></div>
                 <div id="menu-bar" class="menu-bar sticky">
                     <div class="left-buttons">
-                        <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
+                        <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor" title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
                             <i class="fa fa-bars"></i>
-                        </button>
+                        </label>
                         <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
                             <i class="fa fa-paint-brush"></i>
                         </button>
@@ -207,7 +214,7 @@ An example is below.</p>
 <pre><code class="language-yaml">############### This section is just for location-hidden services ###
 
 ## Once you have configured a hidden service, you can look at the
-## contents of the file &quot;.../hidden_service/hostname&quot; for the address
+## contents of the file ".../hidden_service/hostname" for the address
 ## to tell people.
 ##
 ## HiddenServicePort x y:z says to redirect requests on port x to the
@@ -264,39 +271,39 @@ correctly advertising its Onion address to the network.</p>
 <pre><code class="language-bash">$ zcash-cli getnetworkinfo
 </code></pre>
 <pre><code class="language-javascript">{
-  &quot;version&quot;: 4020050,
-  &quot;subversion&quot;: &quot;/MagicBean:4.2.0/&quot;,
-  &quot;protocolversion&quot;: 170013,
-  &quot;connections&quot;: 9,
-  &quot;networks&quot;: [
+  "version": 4020050,
+  "subversion": "/MagicBean:4.2.0/",
+  "protocolversion": 170013,
+  "connections": 9,
+  "networks": [
     {
-    &quot;name&quot;: &quot;ipv4&quot;,
-    &quot;limited&quot;: true,
-    &quot;reachable&quot;: false,
-    &quot;proxy&quot;: &quot;127.0.0.1:9050&quot;,
-    &quot;proxy_randomize_credentials&quot;: true
+    "name": "ipv4",
+    "limited": true,
+    "reachable": false,
+    "proxy": "127.0.0.1:9050",
+    "proxy_randomize_credentials": true
     },
     {
-    &quot;name&quot;: &quot;ipv6&quot;,
-    &quot;limited&quot;: true,
-    &quot;reachable&quot;: false,
-    &quot;proxy&quot;: &quot;127.0.0.1:9050&quot;,
-    &quot;proxy_randomize_credentials&quot;: true
+    "name": "ipv6",
+    "limited": true,
+    "reachable": false,
+    "proxy": "127.0.0.1:9050",
+    "proxy_randomize_credentials": true
     },
     {
-    &quot;name&quot;: &quot;onion&quot;,
-    &quot;limited&quot;: false,
-    &quot;reachable&quot;: true,
-    &quot;proxy&quot;: &quot;127.0.0.1:9050&quot;,
-    &quot;proxy_randomize_credentials&quot;: true
+    "name": "onion",
+    "limited": false,
+    "reachable": true,
+    "proxy": "127.0.0.1:9050",
+    "proxy_randomize_credentials": true
     }
   ],
-  &quot;relayfee&quot;: 0.00000100,
-  &quot;localaddresses&quot;: [
+  "relayfee": 0.00000100,
+  "localaddresses": [
     {
-    &quot;address&quot;: &quot;ynizm2wpla6ec22q.onion&quot;,
-    &quot;port&quot;: 8233,
-    &quot;score&quot;: 10
+    "address": "ynizm2wpla6ec22q.onion",
+    "port": 8233,
+    "score": 10
     }
   ],
 }
@@ -368,12 +375,12 @@ or <code>-connect=0</code> alone to disable automatic connections</li>
 </code></pre>
 <pre><code class="language-javascript">[
   {
-    &quot;id&quot;: 1,
-    &quot;addr&quot;: &quot;ynizm2wpla6ec22q.onion&quot;,
+    "id": 1,
+    "addr": "ynizm2wpla6ec22q.onion",
     ...
-    &quot;version&quot;: 170013,
-    &quot;subver&quot;: &quot;/MagicBean:4.2.0/&quot;,
-    &quot;inbound&quot;: false,
+    "version": 170013,
+    "subver": "/MagicBean:4.2.0/",
+    "inbound": false,
     ...
   }
 ]
@@ -417,7 +424,7 @@ onion)</li>
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../user/security-warnings.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../user/security-warnings.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -431,7 +438,7 @@ onion)</li>
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../user/security-warnings.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../user/security-warnings.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
